k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movietheater
  labels:
    app: movietheater
spec:
  type: NodePort
  selector:
    app: movietheater
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 32766
